--- a/doc/usman/ch-example-nim.tex
+++ b/doc/usman/ch-example-nim.tex
@@ -358,7 +358,7 @@ express-mode = no
 \end{verbatim}
 
 Suppose we link the Nim simulation with the command line user
-interface. We get the executable nim (nim.exe under Windows).
+interface. We get the executable \ttt{nim} (\ttt{nim.exe} under Windows).
 When we run it, we'll get the following screen output:
 
 \begin{verbatim}
@@ -489,6 +489,10 @@ using the inspect.lst file in Tkenv}\\\hline
 using \fmac{WATCH()}\\
 star topology with the number of modules as parameters}\\\hline
 % ROW 10
+\textbf{topo} & various topologies
+&
+{\raggedright using NED for creating parametrized topologies}\\\hline
+% ROW 11
 \textbf{demo} & tour of {\opp} samples & shows how to link several sim. models into one executable\\\hline
 \end{longtable}
 
