--- a/doc/usman/ch-ned-lang.tex
+++ b/doc/usman/ch-ned-lang.tex
@@ -17,7 +17,7 @@ the user to build his own libraries of network descriptions.
 
 
 Files containing network descriptions generally have a \texttt{.ned}
-suffix.  Network descriptions are not used directly: they are
+suffix.  NED files are not used directly: they are
 translated into C++ code by the NEDC compiler, then compiled by the
 C++ compiler and linked into the simulation executable.
 
