--- a/doc/usman/usman.tex
+++ b/doc/usman/usman.tex
@@ -82,6 +82,9 @@
 
 \newcommand{\tab}{\hspace*{5mm}} %% tabulator settings
 
+\newcommand{\new}{\textbf{[New!]}}
+\newcommand{\changed}{\textbf{[Changed!]}}
+
 %% Colordefinition for table header rows (requires package colortbl)
 \newcommand{\tabheadcol}{\rowcolor[gray]{0.8}}
 
